--- a/spring-boot-2-rest-service-with-swagger/Jenkinsfile
+++ b/spring-boot-2-rest-service-with-swagger/Jenkinsfile
@@ -5,11 +5,17 @@ podTemplate(label: label, containers: [
     containerTemplate(name: 'docker', image: 'docker', command: 'cat', ttyEnabled: true)
   ],
 volumes: [
-  hostPathVolume(mountPath: '/home/jenkins/.m2', hostPath: '/home/jenkins/.m2'),
+    hostPathVolume(mountPath: '/root/.m2/repository', hostPath: '/root/.m2/repository'),
   hostPathVolume(mountPath: '/var/run/docker.sock', hostPath: '/var/run/docker.sock')
 ]) {
 
     node(label) {
+        def myRepo = checkout scm
+    def gitCommit = myRepo.GIT_COMMIT
+    def gitBranch = myRepo.GIT_BRANCH
+    def shortGitCommit = "${gitCommit[0..10]}"
+    def previousGitCommit = sh(script: "git rev-parse ${gitCommit}~", returnStdout: true)
+
         stage('Get a Maven project') {
             checkout scm
             container('maven') {
@@ -22,7 +28,7 @@ volumes: [
                 stage 'Maven Static Analysis'
                     withSonarQubeEnv('SonarQube'){
                        // sh 'cd spring-boot-2-rest-service-with-swagger/'
-                        sh "mvn  sonar:sonar -f spring-boot-2-rest-service-with-swagger/pom.xml"
+                        sh "mvn package sonar:sonar -f spring-boot-2-rest-service-with-swagger/pom.xml"
                     }
 // TODO
 //  sun.security.validator.ValidatorException: PKIX path building failed: sun.security.provider.certpath.SunCertPathBuilderException: unable to find valid certification path to requested target               
@@ -30,6 +36,20 @@ volumes: [
 //                    sh 'mvn -B -Djavax.net.ssl.trustStore=/path/to/cacerts dependency-check:check'
 //                }
                 
+                stage('Create Docker images') {
+      container('docker') {
+        withCredentials([[$class: 'UsernamePasswordMultiBinding',
+          credentialsId: 'dockerhub',
+          usernameVariable: 'DOCKER_HUB_USER',
+          passwordVariable: 'DOCKER_HUB_PASSWORD']]) {
+          sh """
+            docker login -u ${DOCKER_HUB_USER} -p ${DOCKER_HUB_PASSWORD}
+            docker build -t paruff/my-image:${gitCommit} .
+            docker push paruff/my-image:${gitCommit}
+            """
+        }
+      }
+}
         
             
             }
